# WorkTraceAgent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  marketplace.json  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
.zcode-plugin/: plugin.json
agents/: openai.yaml
references/: __init__.py  connectors.md  daily-report.schema.json  evidence-contract.md  extension-suggestions.schema.json  feishu-publishing-contract.md  generation.md  okr.example.md  report-contract.md  research-contract.md  weekly-report-contract.md  weekly-report.schema.json  work-profile-contract.md  work-profile.schema.json
scripts/: check_release_versions.py  install_skills.py  worktrace.py
scripts/worktrace_agent/: __init__.py  agent_runner.py  aihot.py  cli.py  codex_runner.py  compact.py  conversation.py  feishu.py  okr.py  render.py  research.py  resource_paths.py  scheduler.py  schema.py  settings.py  storage.py  text.py  weekly_reference.py  window.py
scripts/worktrace_agent/connectors/: __init__.py  browser.py  chatgpt_web.py  claude_code.py  codex_cli.py  codex_web.py  cursor.py  portable.py  sqlite_utils.py
skills/worktrace-collect/: SKILL.md
skills/worktrace-collect/agents/: openai.yaml
skills/worktrace-report/: SKILL.md
skills/worktrace-report/agents/: openai.yaml
skills/worktrace-report/scripts/: worktrace.py
skills/worktrace-research/: SKILL.md
skills/worktrace-research/agents/: openai.yaml
tests/: test_aihot.py  test_cursor.py  test_feishu.py  test_installer.py  test_okr.py  test_release_versions.py  test_scheduler.py  test_settings.py  test_storage.py  test_weekly_reference.py  test_worktrace.py
