[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "worktrace-agent"
version = "1.4.0"
description = "Evidence-backed daily and weekly reports from local Coding Agent conversations"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = ["tzdata; platform_system == 'Windows'"]
keywords = ["coding-agent", "daily-report", "weekly-report", "agent-skills", "okr"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/zxt-wakeup/WorkTraceAgent"
Repository = "https://github.com/zxt-wakeup/WorkTraceAgent"
Issues = "https://github.com/zxt-wakeup/WorkTraceAgent/issues"
Changelog = "https://github.com/zxt-wakeup/WorkTraceAgent/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["build>=1.2,<2", "ruff>=0.12,<1", "twine>=5,<7"]

[project.scripts]
worktrace = "worktrace_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "scripts", "worktrace_agent_resources" = "references"}
packages = ["worktrace_agent", "worktrace_agent.connectors", "worktrace_agent_resources"]

[tool.setuptools.package-data]
worktrace_agent_resources = ["*.json", "*.md"]
